# dfl_on_esp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  InfInt.hpp  data_inp.txt  filterdata.py  main.cpp  nums.txt
main/algorithm_test/: moving_average_gen.txt  moving_average_gen_with_partition.txt  moving_average_loop.txt  moving_average_loop_with_partition.txt
main/benchmarks/: BM_example.txt  BM_file_read_val.txt  BM_mod_sum.txt  BM_sum_every_other_DNO.txt  BM_sum_every_other_O.txt  benchmark.hpp
main/lib/dvfw/: .gitignore  CMakeLists.txt  LICENSE  README.md  implementedPipelines.md
main/lib/dvfw/docs/doxygen/: Doxyfile
main/lib/dvfw/examples/: for_each.cpp
main/lib/dvfw/include/dvfw/: dvfw.hpp
main/lib/dvfw/include/dvfw/helpers/: FWD.hpp  assignable.hpp  crtp.hpp  detect.hpp  invoke.hpp  meta.hpp  optional.hpp
main/lib/dvfw/include/dvfw/impl/: base.hpp  concepts.hpp  operator.hpp  pipes_assembly.hpp  send.hpp
main/lib/dvfw/include/dvfw/pipe/: chunks.hpp  drop.hpp  drop_while.hpp  filter.hpp  fork.hpp  intersperse.hpp  moving_avg.hpp  partition.hpp  scanl.hpp  set_state.hpp  take.hpp  tap.hpp  tee.hpp  transform.hpp  transform_s.hpp
main/lib/dvfw/include/dvfw/sink/: for_each.hpp  hole.hpp  print.hpp  printf.hpp  push_back.hpp  to_out_stream.hpp
main/lib/dvfw/include/dvfw/util/: IO.hpp
main/lib/dvfw/src/: main.cpp
main/lib/dvfw/tests/: CMakeLists.txt  catch.hpp
main/lib/dvfw/tests/pipe/: chunks.cpp  drop.cpp  drop_while.cpp  filter.cpp  fork.cpp  moving_avg.cpp  scanl.cpp  set_state.cpp  take.cpp  tee.cpp  transform.cpp
main/lib/dvfw/tests/sink/: hole.cpp
